--- a/apps/vmware/vars/zeromq_vms/configs/fanout/zeromq-1,2,3xnone-7x1-8x1-9x1.yml
+++ b/apps/vmware/vars/zeromq_vms/configs/fanout/zeromq-1,2,3xnone-7x1-8x1-9x1.yml
@@ -5,8 +5,8 @@ fanout_pub:
   vm_id: 120
 
 fanout_pub_scheme:
-  type: "unicast"
 #  type: "unicast"
+  type: "baseerat"
   baseerat:
     address: 192.168.200.200
     port: 12345
@@ -14,7 +14,7 @@ fanout_pub_scheme:
 fanout_pub_cmds: '' # e.g., msleep(1); or usleep(1);
 #fanout_pub_cmds: 'struct timespec req;req.tv_sec = 0;req.tv_nsec = 1L;nanosleep(&req, (struct timespec *)NULL);'
 
-fanout_sub_count_per_node: 255
+fanout_sub_count_per_node: 1
 
 fanout_pubsub_nodes:
   prme7-k8s-node-120:
