--- a/testbeds/vmware/proxmox.yml
+++ b/testbeds/vmware/proxmox.yml
@@ -2,8 +2,8 @@
 
 - name: provision proxmox VMs
   hosts:
-#          prme-nsx-perf-001
-          prme-nsx-perf-002
+          prme-nsx-perf-001
+         ,prme-nsx-perf-002
          ,prme-nsx-perf-003
          ,prme-nsx-perf-007
          ,prme-nsx-perf-008
