--- a/testbeds/vmware/roles/proxmox/tasks/main.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/main.yml
@@ -1,39 +1,39 @@
 ---
 
 - name: setup hosts (should be done once after a clean install)
-  import_tasks: roles/proxmox/tasks/hosts/setup.yml
+  include: roles/proxmox/tasks/hosts/setup.yml
   tags: setup_hosts
 
 - name: clean hosts
-  import_tasks: roles/proxmox/tasks/hosts/cleanup.yml
+  include: roles/proxmox/tasks/hosts/cleanup.yml
   tags: cleanup_hosts
 
 - name: add VM template
-  import_tasks: roles/proxmox/tasks/vms/template/add.yml
+  include: roles/proxmox/tasks/vms/template/add.yml
   tags: add_template
 
 - name: remove VM template
-  import_tasks: roles/proxmox/tasks/vms/template/remove.yml
+  include: roles/proxmox/tasks/vms/template/remove.yml
   tags: remove_template
 
 - name: install pisces
-  import_tasks: roles/proxmox/tasks/networking/overlay/switches/pisces/build/setup.yml
+  include: roles/proxmox/tasks/networking/overlay/switches/pisces/build/setup.yml
   tags: install_pisces
 
 - name: clean pisces
-  import_tasks: roles/proxmox/tasks/networking/overlay/switches/pisces/build/cleanup.yml
+  include: roles/proxmox/tasks/networking/overlay/switches/pisces/build/cleanup.yml
   tags: clean_pisces
 
 - name: setup overlay network
-  import_tasks: roles/proxmox/tasks/networking/overlay/setup.yml
+  include: roles/proxmox/tasks/networking/overlay/setup.yml
   tags: setup_overlay
 
 - name: cleanup overlay network
-  import_tasks: roles/proxmox/tasks/networking/overlay/cleanup.yml
+  include: roles/proxmox/tasks/networking/overlay/cleanup.yml
   tags: cleanup_overlay
 
 - name: create VMs
-  include_tasks: roles/proxmox/tasks/vms/create.yml
+  include: roles/proxmox/tasks/vms/create.yml
   vars:
     proxmox_vm_id: "{{ item }}"
     proxmox_prme_id: "{{ nodes[inventory_hostname]['prme_id'] }}"
@@ -41,7 +41,7 @@
   tags: create_vms
 
 - name: destroy VMs
-  include_tasks: roles/proxmox/tasks/vms/destroy.yml
+  include: roles/proxmox/tasks/vms/destroy.yml
   vars:
     proxmox_vm_id: "{{ item }}"
     proxmox_prme_id: "{{ nodes[inventory_hostname]['prme_id'] }}"
@@ -49,17 +49,17 @@
   tags: destroy_vms
 
 #- name: setup br0 as gateway bridge (deprecated)
-#  import_tasks: roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/setup.yml
+#  include: roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/setup.yml
 #  tags: setup_br0_as_primary_bridge
 #
 #- name: cleanup br0 as gateway bridge (deprecated)
-#  import_tasks: roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/cleanup.yml
+#  include: roles/proxmox/tasks/networking/others/br0_as_gateway_bridge/cleanup.yml
 #  tags: cleanup_br0_as_primary_bridge
 
 - name: add br0 flow rules
-  import_tasks: roles/proxmox/tasks/networking/others/br0_add_flow_rules/setup.yml
+  include: roles/proxmox/tasks/networking/others/br0_add_flow_rules/setup.yml
   tags: add_br0_flow_rules
 
 - name: remove br0 flow rules
-  import_tasks: roles/proxmox/tasks/networking/others/br0_add_flow_rules/cleanup.yml
+  include: roles/proxmox/tasks/networking/others/br0_add_flow_rules/cleanup.yml
   tags: remove_br0_flow_rules
