--- a/testbeds/vmware/roles/proxmox/tasks/networking/others/br0_add_flow_rules/cleanup.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/others/br0_add_flow_rules/cleanup.yml
@@ -1,9 +1,9 @@
 ---
 
 - name: cleanup ovs (kernel) as gateway bridge
-  import_tasks: roles/proxmox/tasks/networking/others/br0_add_flow_rules/switches/ovs_kernel/cleanup.yml
+  include: roles/proxmox/tasks/networking/others/br0_add_flow_rules/switches/ovs_kernel/cleanup.yml
   when: 'overlay_switch.bridge.type == "ovs_kernel"'
 
 - name: cleanup pisces as gateway bridge
-  import_tasks: roles/proxmox/tasks/networking/others/br0_add_flow_rules/switches/pisces/cleanup.yml
+  include: roles/proxmox/tasks/networking/others/br0_add_flow_rules/switches/pisces/cleanup.yml
   when: 'overlay_switch.bridge.type == "pisces"'
