--- a/testbeds/vmware/roles/proxmox/tasks/networking/overlay/cleanup.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/networking/overlay/cleanup.yml
@@ -4,9 +4,9 @@
   shell: iptables -D INPUT -s {{ proxmox_vm_network_address_prefix }}0.0/16 -i eth0 -j DROP
 
 - name: cleanup pisces
-  import_tasks: roles/proxmox/tasks/networking/overlay/switches/pisces/cleanup.yml
+  include: roles/proxmox/tasks/networking/overlay/switches/pisces/cleanup.yml
   when: 'overlay_switch.type == "pisces"'
 
 - name: cleanup ovs (kernel)
-  import_tasks: roles/proxmox/tasks/networking/overlay/switches/ovs_kernel/cleanup.yml
+  include: roles/proxmox/tasks/networking/overlay/switches/ovs_kernel/cleanup.yml
   when: 'overlay_switch.type == "ovs_kernel"'
