--- a/testbeds/vmware/roles/benchmark_switch/defaults/main.yml
+++ b/testbeds/vmware/roles/benchmark_switch/defaults/main.yml
@@ -5,31 +5,31 @@ proxmox_vm_network_address_prefix: 192.168.
 nodes:
   prme-nsx-perf-005:
     interfaces:
-#      - eth2  # prme-nsx-perf-004:eth9
-#      - eth5  # prme-nsx-perf-004:eth6
-      - eth8  # prme-nsx-perf-004:eth7
-#      - eth6  # prme-nsx-perf-006:eth7
-#      - eth7  # prme-nsx-perf-006:eth9
-      - eth9  # prme-nsx-perf-006:eth6
+      - eth2  # prme-nsx-perf-004:eth9
+      - eth5  # prme-nsx-perf-004:eth6
+#      - eth8  # prme-nsx-perf-004:eth7
+      - eth6  # prme-nsx-perf-006:eth7
+      - eth7  # prme-nsx-perf-006:eth9
+#      - eth9  # prme-nsx-perf-006:eth6
     options:
-#      eth2:
-#        pci_id: "0000:41:00.0"
-#        if_index: 1 # NOTE: for some reason this is assigned in the order of eth ids (e.g., eth2=1, and eth7=2).
-#      eth5:
-#        pci_id: "0000:41:00.1"
-#        if_index: -
-      eth8:
-        pci_id: "0000:44:00.0"
-        if_index: 1
-#      eth6:
-#        pci_id: "0000:43:00.0"
-#        if_index: -
-#      eth7:
-#        pci_id: "0000:43:00.1"
-#        if_index: -
-      eth9:
-        pci_id: "0000:44:00.1"
+      eth2:
+        pci_id: "0000:41:00.0"
+        if_index: 1 # NOTE: for some reason this is assigned in the order of eth ids (e.g., eth2=1, and eth7=2).
+      eth5:
+        pci_id: "0000:41:00.1"
         if_index: 2
+#      eth8:
+#        pci_id: "0000:44:00.0"
+#        if_index: 5
+      eth6:
+        pci_id: "0000:43:00.0"
+        if_index: 3
+      eth7:
+        pci_id: "0000:43:00.1"
+        if_index: 4
+#      eth9:
+#        pci_id: "0000:44:00.1"
+#        if_index: 6
     dpdk:
       cpu_mask: '0x0220'
       memory_channels: 4
