--- a/testbeds/vmware/roles/benchmark_tester/tasks/networking/setup.yml
+++ b/testbeds/vmware/roles/benchmark_tester/tasks/networking/setup.yml
@@ -20,5 +20,9 @@
   include: roles/benchmark_tester/tasks/networking/testers/ping/setup.yml
   when: 'tester.type == "ping"'
 
+- name: setup moongen
+  include: roles/benchmark_tester/tasks/networking/testers/moongen/setup.yml
+  when: 'tester.type == "moongen"'
+
 #- name: add iptables rule to filter traffic coming from eth0 belonging to the overlay subnet
 #  shell: iptables -I INPUT -s {{ proxmox_vm_network_address_prefix }}0.0/16 -i eth0 -j DROP
