--- a/testbeds/vmware/roles/benchmark_switch/tasks/networking/cleanup.yml
+++ b/testbeds/vmware/roles/benchmark_switch/tasks/networking/cleanup.yml
@@ -3,9 +3,9 @@
 #- name: remove iptables rule to filter traffic coming from eth0 belonging to the overlay subnet
 #  shell: iptables -D INPUT -s {{ proxmox_vm_network_address_prefix }}0.0/16 -i eth0 -j DROP
 
-#- name: cleanup pisces
-#  include: roles/benchmark_switch/tasks/networking/switches/pisces/cleanup.yml
-#  when: 'switch.type == "pisces"'
+- name: cleanup pisces
+  include: roles/benchmark_switch/tasks/networking/switches/pisces/cleanup.yml
+  when: 'switch.type == "pisces"'
 
 - name: cleanup ovs (dpdk)
   include: roles/benchmark_switch/tasks/networking/switches/ovs_dpdk/cleanup.yml
