--- a/testbeds/vmware/roles/benchmark_switch/tasks/networking/switches/pisces/setup.yml
+++ b/testbeds/vmware/roles/benchmark_switch/tasks/networking/switches/pisces/setup.yml
@@ -24,4 +24,10 @@
   shell: cd /root/ovs/utilities;
          ./ovs-ofctl --protocols=OpenFlow15 add-flow br0 '{{ item }}';
          cd /root
-  with_items: "{{ dc_switch.pisces.flow_rules[inventory_hostname] }}"
+  with_items: "{{ switch.pisces.flow_rules[inventory_hostname] }}"
+
+- name: copy p4 script
+  copy:
+    src: "{{ switches.pisces.p4_programs.base_dir }}/p4_programs/{{ switch.pisces.p4_script }}"
+    dest: /root/ovs/include/p4/examples/{{ switch.pisces.p4_script }}
+  when: "switch.pisces.p4_script != ''"
