--- a/testbeds/vmware/vars/benchmark_switch/main.yml
+++ b/testbeds/vmware/vars/benchmark_switch/main.yml
@@ -1,17 +1,18 @@
 ---
 
 switch:
-  type: "ovs_dpdk" # Options: linux_bridge, ovs_dpdk, pisces
-#  pisces:
-#    p4_program: "baseerat_bitmap.p4"
-#    flow_rules: # Also, see defaults/main.yml for eths' if_indexes.
-#      prme-nsx-perf-005:
-#        - "table=0,priority=10,ipv4__dstAddr={{ '172.16.140.158' | ipaddr('address') | ipaddr('int') }} actions=1" # to prme-nsx-perf-001
-#        - "table=0,priority=10,ipv4__dstAddr={{ '172.16.140.159' | ipaddr('address') | ipaddr('int') }} actions=1" # to prme-nsx-perf-002
-#        - "table=0,priority=10,ipv4__dstAddr={{ '172.16.140.160' | ipaddr('address') | ipaddr('int') }} actions=1" # to prme-nsx-perf-003
-#        - "table=0,priority=10,ipv4__dstAddr={{ '172.16.140.96'  | ipaddr('address') | ipaddr('int') }} actions=2" # to prme-nsx-perf-007
-#        - "table=0,priority=10,ipv4__dstAddr={{ '172.16.140.97'  | ipaddr('address') | ipaddr('int') }} actions=2" # to prme-nsx-perf-008
-#        - "table=0,priority=10,ipv4__dstAddr={{ '172.16.140.98'  | ipaddr('address') | ipaddr('int') }} actions=2" # to prme-nsx-perf-009
+  type: "pisces" # Options: linux_bridge, ovs_dpdk, pisces
+  pisces:
+    p4_program: "baseerat_vswitch_4_headers_combined.p4"
+    p4_script: "baseerat_vswitch_4_headers_combined.sh"
+    flow_rules: # Also, see defaults/main.yml for eths' if_indexes.
+      prme-nsx-perf-005:
+#        - "table=0,priority=10,ipv4__dstAddr={{ '10.0.0.14' | ipaddr('address') | ipaddr('int') }} actions=1" # to prme-nsx-perf-001
+#        - "table=0,priority=10,ipv4__dstAddr={{ '20.0.0.16' | ipaddr('address') | ipaddr('int') }} actions=2" # to prme-nsx-perf-002
+#        - "table=0,priority=10,ipv4__dstAddr={{ '30.0.0.18' | ipaddr('address') | ipaddr('int') }} actions=5" # to prme-nsx-perf-003
+        - "table=0,priority=10,ipv4__dstAddr={{ '192.168.56.11'  | ipaddr('address') | ipaddr('int') }} actions=3" # to prme-nsx-perf-007
+        - "table=0,priority=10,ipv4__dstAddr={{ '192.168.56.12'  | ipaddr('address') | ipaddr('int') }} actions=4" # to prme-nsx-perf-008
+#        - "table=0,priority=10,ipv4__dstAddr={{ '30.0.0.19'  | ipaddr('address') | ipaddr('int') }} actions=6" # to prme-nsx-perf-009
   ovs_dpdk:
     flow_rules: # Also, see defaults/main.yml for eths' if_indexes.
       prme-nsx-perf-005:
