--- a/testbeds/vmware/roles/benchmark_switch/tasks/networking/switches/pisces/setup.yml
+++ b/testbeds/vmware/roles/benchmark_switch/tasks/networking/switches/pisces/setup.yml
@@ -32,5 +32,5 @@
     dest: /root/ovs/include/p4/examples/{{ switch.pisces.p4_script }}
   when: "switch.pisces.p4_script != ''"
 
-#- name: run p4 script
-#  shell: sh  /root/ovs/include/p4/examples/{{ switch.pisces.p4_script }}
+- name: run p4 script
+  shell: sh  /root/ovs/include/p4/examples/{{ switch.pisces.p4_script }}
